--- a/configs/tailwind/tailwind.css
+++ b/configs/tailwind/tailwind.css
@@ -3,13 +3,12 @@
 
 /* Tailwind plugins */
 @plugin "@tailwindcss/typography";
-@plugin "daisyui" {
-  themes: light --default, night --prefersdark;
-}
 
-/* Tailwind theme */
-@custom-variant light (&:where([data-theme=light], [data-theme=light] *));
-@custom-variant dark (&:where([data-theme=night], [data-theme=night] *));
+/* HeroUI theme */
+@plugin './hero.ts';
+
+@source '../../node_modules/@heroui/theme/dist/**/*.{js,ts,jsx,tsx}';
+@custom-variant dark (&:is(.dark *));
 
 body {
   font-family: "Rubik", sans-serif, system-ui;
