--- a/apps/web/src/main.css
+++ b/apps/web/src/main.css
@@ -12,6 +12,6 @@
 @import "../node_modules/tailwind-config/tailwind.css";
 
 /* Tailwind sources */
-@source "./";
+@source "./**/**.{js,ts,jsx,tsx}";
 @source "../node_modules/ui-package";
 @source "../node_modules/storybook-package";
