feat(view): home migrated

--- a/configs/tailwind/tailwind.css
+++ b/configs/tailwind/tailwind.css
@@ -1,6 +1,9 @@
 /* Tailwind confugration */
 @import "tailwindcss";
 
+/* Tailwind plugins */
+@plugin "@tailwindcss/typography";
+
 /* HeroUI theme */
 @plugin './hero.ts';
 
