feat: add design tokens to project

--- a/configs/tailwind/tailwind.css
+++ b/configs/tailwind/tailwind.css
@@ -1,3 +1,7 @@
+/* Design Tokens */
+/* @import "@package/design-tokens/css"; */
+@import "../../node_modules/@config/design-tokens/dist/css";
+
 /* Tailwind confugration */
 @import "tailwindcss";
 
