feat: move design-tokens into own structure

--- a/configs/tailwind/tailwind.css
+++ b/configs/tailwind/tailwind.css
@@ -1,5 +1,5 @@
 /* Design Tokens */
-@import "@config/design-tokens/css";
+@import "@design/tokens/css";
 
 /* Tailwind confugration */
 @import "tailwindcss";
